# healthcare-pipeline

./: README.md  pyproject.toml  requirements.txt  session_store.db  setup.sh  stats.json
conf/base/: catalog.yml  parameters.yml  spark.yml
gx/: great_expectations.yml  test_web_broser.py
gx/checkpoints/: conditions_checkpoint.yml  encounters_checkpoint.yml  medications_checkpoint.yml  patients_checkpoint.yml  patients_gender_checkpoint.yml  symptoms_checkpoint.yml
gx/expectations/: .ge_store_backend_id  conditions_expectations.json  create_conditions_expectations.py  create_encounters_expectations.py  create_medications_expectations.py  create_patients_expectations.py  create_patients_gender_expectations.py  create_symptoms_expectations.py  encounters_expectations.json  medications_expectations.json  patients_expectations.json  patients_gender_expectations.json  symptoms_expectations.json
gx/validations/: run_conditions_validations.py  run_encounters_validations.py  run_medications_validations.py  run_patients_gender_validations.py  run_patients_validations.py  run_symptoms_validations.py  validate_all.sh
healthcare_pipeline_dbt/: dbt_project.yml  load_data_to_sqlite.py
healthcare_pipeline_dbt/models/: schema.yml  sources.yml
healthcare_pipeline_dbt/models/staging/: conditions.sql  encounters.sql  medications.sql  patient_gender.sql  patients.sql  (+1 more)
healthcare_pipeline_dbt/tests/: check_db.py
healthcare_pipeline_dbt/~.dbt/: profiles.yml
src/healthcare_pipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py
tests/: test_run.py
(+8 files in other folders)
