[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
healthcare-pipeline = "healthcare_pipeline.__main__:main"

[tool.kedro]
package_name = "healthcare_pipeline"
project_name = "healthcare_pipeline"
kedro_init_version = "0.19.6"
tools = [ "Linting", "Testing", "Custom Logging", "Data Structure", "PySpark", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/healthcare_pipeline -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "healthcare_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "78dd145ba27c49f8bd47ba6f76a9a5a6"
